Fix z-index issue for audio controls in Chrome.

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ h1 {
 audio {
   position: fixed;
   top: 0;
+  z-index: 100;
 }
 
 button {
